add improved static methods feature

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -192,6 +192,8 @@ GetClass=getClass
 IsEnum=isEnum
 Init=init
 IsStatic=isStatic
+IsStaticCall=isStaticCall
+IsInstanceMethod=isInstanceMethod
 IsClass=isClass
 Xor=xor
 Lt=lt
