--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -182,6 +182,8 @@ ArrayGet=obtenir
 GetField=obtenir
 IsFinal=estFinal
 IsStatic=estStatic
+IsStaticCall=estStaticAppel
+IsInstanceMethod=estMethInstance
 IsClass=estClasse
 ArraySet=maj
 IsNormal=estNormal
