add file features

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -408,6 +408,8 @@ EntryValue=value
 FileIsAbsolute=isAbsolute
 FileReadBin=readBin
 FileWriteBin=writeBin
+FileDelete=delete
+FileRename=renameTo
 DefaultPkg=$core
 FalseString=false
 TrueString=true
