--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -408,6 +408,8 @@ EntryValue=valeur
 FileIsAbsolute=estAbsolu
 FileReadBin=lireBin
 FileWriteBin=ecrireBin
+FileDelete=suppr
+FileRename=renommer
 DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
