add file features, clean code

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -398,8 +398,10 @@ GetTa=get
 InfoTest=$core.InfoTest
 Assert=$core.Assert
 FileZippedBin=zippedBinary
+FileZippedBinArray=zippedBinaryArray
 FileZippedText=zippedText
 FileZipBin=zipBinary
+FileZipBinArray=zipBinaryArray
 FileZipText=zipText
 EntryBinary=$core.BinaryEntry
 EntryText=$core.TextEntry
