--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -398,8 +398,10 @@ SizeTa=taille
 Execute=$coeur.Executer
 GetTa=val
 FileZippedBin=archiveBin
+FileZippedBinArray=archiveBinTab
 FileZippedText=archiveTexte
 FileZipBin=archBin
+FileZipBinArray=archBinTab
 FileZipText=archTexte
 EntryBinary=$coeur.EltArchBinaire
 EntryText=$coeur.EltArchTexte
