--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -309,6 +309,15 @@ ReentrantLock=$core.ReentrantLock
 ThreadCurrentTime=currentTime
 ThreadExitHook=exitHook
 SetAtomic=setValue
+CompareAndSetAtomic=compareAndSet
+LazySetAtomic=lazySet
+AddAndGetAtomic=addAndGet
+GetAndAddAtomic=getAndAdd
+IncrementAndGetAtomic=incrementAndGet
+GetAndIncrementAtomic=getAndIncrement
+DecrementAndGetAtomic=decrementAndGet
+GetAndDecrementAtomic=getAndDecrement
+GetAndSetAtomic=getAndSet
 FileIsFile=isFile
 FormatType=$core.Formatting
 GetPriority=getPriority
@@ -336,6 +345,8 @@ Runnable=$core.Runnable
 Run=run
 Sleep=sleep
 IsAlive=isAlive
+IsEnded=isEnded
+End=end
 Join=join
 GetId=getId
 Yield=yield
