--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -309,6 +309,15 @@ FileIsFile=estFichier
 FileGetParentPath=chParent
 JoinOthers=attendreAutres
 SetAtomic=majValeur
+CompareAndSetAtomic=compareEtMaj
+LazySetAtomic=tardMaj
+AddAndGetAtomic=ajEtObt
+GetAndAddAtomic=obtEtAj
+IncrementAndGetAtomic=incrEtObt
+GetAndIncrementAtomic=obtEtIncr
+DecrementAndGetAtomic=decrEtObt
+GetAndDecrementAtomic=obtEtDecr
+GetAndSetAtomic=obtEtMaj
 GetPriority=valPriorite
 FileListFiles=fichiers
 CustIterator=$coeur.CustIterateur
@@ -375,6 +384,8 @@ CustPair=$coeur.PaireImpl
 Second=deuxieme
 ArrayLi=tableau
 IsAlive=estActif
+IsEnded=estFini
+End=finir
 ListVar=T
 Sleep=dormir
 Join=attendre
