--- a/expressionlanguageutil/pom.xml
+++ b/expressionlanguageutil/pom.xml
@@ -34,8 +34,8 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>mathssml</groupId>
-            <artifactId>mathssml</artifactId>
+            <groupId>resources</groupId>
+            <artifactId>resources</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
