refactor code, split strings inputs

--- a/rendersgui/resources_renders/aliases/en/types.properties
+++ b/rendersgui/resources_renders/aliases/en/types.properties
@@ -427,6 +427,8 @@ DefaultPkg=$core
 FalseString=false
 TrueString=true
 NullString=
+StaticString=static
+StaticCallString=staticCall
 Bean=$core.Bean
 MapKeys=keys
 MapValues=values
