--- a/rendersgui/resources_renders/aliases/fr/types.properties
+++ b/rendersgui/resources_renders/aliases/fr/types.properties
@@ -427,6 +427,8 @@ DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
 NullString=
+StaticString=static
+StaticCallString=staticAppel
 Bean=$coeur.Graine
 MapKeys=cles
 MapValues=valeurs
