add print single type

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -234,6 +234,7 @@ StringUtil=$core.StringUtil
 GetParent=getParent
 GetFileName=getFileName
 GetPrettyName=getPrettyName
+GetPrettySingleName=getPrettySingleName
 GetParameterTypes=getParameterTypes
 IsAbstract=isAbstract
 GetGenericInterfaces=getGenericInterfaces
