--- a/rendersgui/resources_renders/aliases/en/types.properties
+++ b/rendersgui/resources_renders/aliases/en/types.properties
@@ -234,6 +234,7 @@ StringUtil=$core.StringUtil
 GetParent=getParent
 GetFileName=getFileName
 GetPrettyName=getPrettyName
+GetPrettySingleName=getPrettySingleName
 GetParameterTypes=getParameterTypes
 IsAbstract=isAbstract
 GetGenericInterfaces=getGenericInterfaces
