--- a/rendersgui/resources_renders/aliases/fr/types.properties
+++ b/rendersgui/resources_renders/aliases/fr/types.properties
@@ -230,6 +230,7 @@ GetDeclaredClasses=valClassesDeclarees
 GetSuperClass=valSuperClasse
 GetLowerBounds=valSousTypesContraintes
 GetPrettyName=valJoliNom
+GetPrettySingleName=valJoliSimpleNom
 GetComponentType=valTypeComposent
 ObjectsUtil=$coeur.ObjetsUtil
 GetGenericReturnType=valGeneTypeRetour
