--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -428,5 +428,7 @@ DefaultPkg=$core
 FalseString=false
 TrueString=true
 NullString=
+NullCoverString=null
+NotNullCoverString=not null
 StaticString=static
 StaticCallString=staticCall
