--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -428,5 +428,7 @@ DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
 NullString=
+NullCoverString=nul
+NotNullCoverString=non nul
 StaticString=static
 StaticCallString=staticAppel
