--- a/rendersgui/resources_renders/aliases/fr/types.properties
+++ b/rendersgui/resources_renders/aliases/fr/types.properties
@@ -428,6 +428,8 @@ DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
 NullString=
+NullCoverString=nul
+NotNullCoverString=non nul
 StaticString=static
 StaticCallString=staticAppel
 Bean=$coeur.Graine
