--- a/rendersgui/resources_renders/aliases/en/types.properties
+++ b/rendersgui/resources_renders/aliases/en/types.properties
@@ -428,6 +428,8 @@ DefaultPkg=$core
 FalseString=false
 TrueString=true
 NullString=
+NullCoverString=null
+NotNullCoverString=not null
 StaticString=static
 StaticCallString=staticCall
 Bean=$core.Bean
