--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -24,6 +24,11 @@
 		    <version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>maths</groupId>
+			<artifactId>maths</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>resources</groupId>
 			<artifactId>resources</artifactId>
 			<version>1.0-SNAPSHOT</version>
