improve read resources

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -151,7 +151,9 @@ ClassType=$core.Class
 GetDefaultValue=getDefaultValue
 GetAnnotationsParameters=getAnnotationsParameters
 ReadResourcesNames=readNames
+ReadResourcesNamesLength=nbNames
 ReadResources=readContent
+ReadResourcesIndex=index
 InvokeTarget=$core.InvokeTarget
 GetVariableOwner=getVariableOwner
 Resources=$core.Resources
