--- a/rendersgui/resources_renders/aliases/fr/types.properties
+++ b/rendersgui/resources_renders/aliases/fr/types.properties
@@ -151,6 +151,7 @@ GetAnnotationsParameters=valAnnotationsParametrees
 Resources=$coeur.Ressources
 IteratorTypeVar=T
 ReadResources=lireContenu
+ReadResourcesIndex=indice
 InvokeTarget=$coeur.InvoqueCible
 GetGenericVariableOwner=valGeneVariablePoss
 ClassType=$coeur.Classe
@@ -168,6 +169,7 @@ PairTypeVarSecond=U
 EnumPredValueOf=valeurDe
 EnumValues=valeurs
 ReadResourcesNames=lireNoms
+ReadResourcesNamesLength=nbNoms
 AnnotationType=$coeur.Annotation
 Annotated=$coeur.Annote
 MakeGeneric=rendreGeneric
