--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -1,5 +1,8 @@
 MIN_VALUE=MIN_VALEUR
 MAX_VALUE=MAX_VALEUR
+PLUS_INFINITY=PLUS_INFINI
+MINUS_INFINITY=MOINS_INFINI
+NAN=PUN
 CharSequence=$coeur.SequenceCaractere
 BadEncode=$coeur.MauvaisEncodage
 IllegalArg=$coeur.IllegalArgument
