--- a/rendersgui/resources_renders/aliases/en/types.properties
+++ b/rendersgui/resources_renders/aliases/en/types.properties
@@ -1,5 +1,8 @@
 MIN_VALUE=MIN_VALUE
 MAX_VALUE=MAX_VALUE
+PLUS_INFINITY=PLUS_INFINITY
+MINUS_INFINITY=MINUS_INFINITY
+NAN=NAN
 GetMessage=getMessage
 IteratorType=$core.Iterator
 DivisionZero=$core.DivideZero
