--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -161,6 +161,7 @@ ClassType=$coeur.Classe
 EnumParamVar=T
 GetVariableOwner=valVariablePoss
 GetString=valChaine
+GetDeclaredExplicits=valExplicitesDeclares
 GetDeclaredMethods=valMethodsDeclares
 GetDeclaredStaticMethods=valMethodsStaticDeclares
 IterableVar=T
