--- a/rendersgui/resources_renders/aliases/en/types.properties
+++ b/rendersgui/resources_renders/aliases/en/types.properties
@@ -173,6 +173,7 @@ ClassNotFoundError=$core.ClassNotFound
 GetAnnotations=getAnnotations
 PairTypeVarFirst=T
 Constructor=$core.Constructor
+GetDeclaredExplicits=getDeclaredExplicits
 GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
