--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -174,6 +174,7 @@ GetAnnotations=getAnnotations
 PairTypeVarFirst=T
 Constructor=$core.Constructor
 GetDeclaredExplicits=getDeclaredExplicits
+GetDeclaredImplicits=getDeclaredImplicits
 GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
