--- a/rendersgui/resources_renders/aliases/fr/types.properties
+++ b/rendersgui/resources_renders/aliases/fr/types.properties
@@ -162,6 +162,7 @@ EnumParamVar=T
 GetVariableOwner=valVariablePoss
 GetString=valChaine
 GetDeclaredExplicits=valExplicitesDeclares
+GetDeclaredImplicits=valImplicitesDeclares
 GetDeclaredMethods=valMethodsDeclares
 GetDeclaredStaticMethods=valMethodsStaticDeclares
 IterableVar=T
