--- a/desktop/applis/apps/gui/guicommon/pom.xml
+++ b/desktop/applis/apps/gui/guicommon/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>images</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>threads</groupId>
+			<artifactId>threads</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
         <dependency>
             <groupId>stream</groupId>
             <artifactId>stream</artifactId>
