--- a/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
@@ -18,6 +18,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>threads</groupId>
+            <artifactId>threads</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>stream</groupId>
             <artifactId>stream</artifactId>
             <version>1.0-SNAPSHOT</version>
