--- a/desktop/applis/apps/apps_util/threads/pom.xml
+++ b/desktop/applis/apps/apps_util/threads/pom.xml
@@ -3,29 +3,29 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-       <groupId>files_games</groupId>
-        <artifactId>files_games</artifactId>
+       <groupId>apps_util</groupId>
+        <artifactId>apps_util</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>cardgamesunion</groupId>
-	<artifactId>cardgamesunion</artifactId>
+	<groupId>threads</groupId>
+	<artifactId>threads</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
-			<groupId>cardgamessml</groupId>
-			<artifactId>cardgamessml</artifactId>
+		    <groupId>sml</groupId>
+		    <artifactId>sml</artifactId>
+		    <version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>maths</groupId>
+			<artifactId>maths</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>threads</groupId>
-			<artifactId>threads</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>stream</groupId>
-			<artifactId>stream</artifactId>
+			<groupId>resources</groupId>
+			<artifactId>resources</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
