--- a/desktop/applis/apps/apps_util/pom.xml
+++ b/desktop/applis/apps/apps_util/pom.xml
@@ -14,6 +14,7 @@
 	<modules>
 		<module>resources</module>
 		<module>threads</module>
+		<module>random</module>
 		<module>stream</module>
 		<module>expressionlanguageutil</module>
 	</modules>
