--- a/desktop/applis/apps/apps_util/random/pom.xml
+++ b/desktop/applis/apps/apps_util/random/pom.xml
@@ -7,20 +7,15 @@
         <artifactId>apps_util</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>stream</groupId>
-	<artifactId>stream</artifactId>
+	<groupId>random</groupId>
+	<artifactId>random</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
-		    <groupId>sml</groupId>
-		    <artifactId>sml</artifactId>
-		    <version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>resources</groupId>
-			<artifactId>resources</artifactId>
+			<groupId>maths</groupId>
+			<artifactId>maths</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
