--- a/desktop/applis/apps/gui/guicommon/pom.xml
+++ b/desktop/applis/apps/gui/guicommon/pom.xml
@@ -33,6 +33,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
+			<groupId>random</groupId>
+			<artifactId>random</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>mathssml</groupId>
 			<artifactId>mathssml</artifactId>
 			<version>1.0-SNAPSHOT</version>
