--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -175,6 +175,8 @@ PairTypeVarFirst=T
 Constructor=$core.Constructor
 GetDeclaredExplicits=getDeclaredExplicits
 GetDeclaredImplicits=getDeclaredImplicits
+GetDeclaredTrueOperators=getDeclaredTrueOperators
+GetDeclaredFalseOperators=getDeclaredFalseOperators
 GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
