--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
@@ -163,6 +163,8 @@ GetVariableOwner=valVariablePoss
 GetString=valChaine
 GetDeclaredExplicits=valExplicitesDeclares
 GetDeclaredImplicits=valImplicitesDeclares
+GetDeclaredTrueOperators=valOperateursVraiDeclares
+GetDeclaredFalseOperators=valOperateursFauxDeclares
 GetDeclaredMethods=valMethodsDeclares
 GetDeclaredStaticMethods=valMethodsStaticDeclares
 IterableVar=T
