refactor code, add meta information for lambdas.

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -116,6 +116,8 @@ Reverse=reverse
 Same=same
 Mod=mod
 Call=call
+MetaInfo=metaInfo
+Instance=instance
 StartsWith=startsWith
 DeleteCharAt=deleteCharAt
 LastIndexOf=lastIndexOf
