--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -85,6 +85,8 @@ Field=$coeur.Champ
 HasNext=aSuivant
 Next=suivant
 Call=appeler
+MetaInfo=metaInfo
+Instance=instance
 NextPair=suivantPair
 Same=meme
 GetFirst=valPremier
