--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -116,6 +116,8 @@ Reverse=reverse
 Same=same
 Mod=mod
 Call=call
+MetaInfo=metaInfo
+Instance=instance
 StartsWith=startsWith
 DeleteCharAt=deleteCharAt
 LastIndexOf=lastIndexOf
