--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/comments.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/comments.properties
@@ -1,1 +1,1 @@
-comments=\u005c*,*\u005c;\u005c\u005c,\n;<html>,</html>;>,\n
+comments=\u005c*,*\u005c;\u005c\u005c,\n;\u005c<html>,</html>;\u005c>,\n
