add retrieved info by reflection

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -182,6 +182,9 @@ GetDeclaredFalseOperators=getDeclaredFalseOperators
 GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
+GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
+GetDeclaredLocalTypes=getDeclaredLocalTypes
+GetDeclaredBlocks=getDeclaredBlocks
 MakeGeneric=makeGeneric
 GetDeclaredConstructors=getDeclaredConstructors
 GetAllClasses=getAllClasses
