--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -182,6 +182,9 @@ GetDeclaredFalseOperators=getDeclaredFalseOperators
 GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
+GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
+GetDeclaredLocalTypes=getDeclaredLocalTypes
+GetDeclaredBlocks=getDeclaredBlocks
 MakeGeneric=makeGeneric
 GetDeclaredConstructors=getDeclaredConstructors
 GetAllClasses=getAllClasses
