--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
@@ -183,6 +183,9 @@ AnnotationType=$coeur.Annotation
 Annotated=$coeur.Annote
 MakeGeneric=rendreGeneric
 GetDeclaredFields=valChampsDeclares
+GetDeclaredAnonymousTypes=valTypesAnonymesDeclares
+GetDeclaredLocalTypes=valLocalTypesDeclares
+GetDeclaredBlocks=valBlocsDeclares
 GetOperators=valOperateurs
 GetDeclaredConstructors=valConstructeursDeclares
 Constructor=$coeur.Constructeur
