add anonymous lambda

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -183,6 +183,7 @@ GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
 GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
+GetDeclaredAnonymousLambda=getDeclaredAnonymousLambda
 GetDeclaredLocalTypes=getDeclaredLocalTypes
 GetDeclaredBlocks=getDeclaredBlocks
 MakeGeneric=makeGeneric
