--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -184,6 +184,7 @@ Annotated=$coeur.Annote
 MakeGeneric=rendreGeneric
 GetDeclaredFields=valChampsDeclares
 GetDeclaredAnonymousTypes=valTypesAnonymesDeclares
+GetDeclaredAnonymousLambda=valLambdaAnonymesDeclares
 GetDeclaredLocalTypes=valLocalTypesDeclares
 GetDeclaredBlocks=valBlocsDeclares
 GetOperators=valOperateurs
