--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -183,6 +183,7 @@ GetDeclaredMethods=getDeclaredMethods
 GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
 GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
+GetDeclaredAnonymousLambda=getDeclaredAnonymousLambda
 GetDeclaredLocalTypes=getDeclaredLocalTypes
 GetDeclaredBlocks=getDeclaredBlocks
 MakeGeneric=makeGeneric
