improve anonymous lambda

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -184,6 +184,8 @@ GetDeclaredStaticMethods=getDeclaredStaticMethods
 GetDeclaredFields=getDeclaredFields
 GetDeclaredAnonymousTypes=getDeclaredAnonymousTypes
 GetDeclaredAnonymousLambda=getDeclaredAnonymousLambda
+GetDeclaredAnonymousLambdaLocalVars=getDeclaredAnonymousLambdaLocVars
+GetDeclaredAnonymousLambdaLoopVars=getDeclaredAnonymousLambdaLoopVars
 GetDeclaredLocalTypes=getDeclaredLocalTypes
 GetDeclaredBlocks=getDeclaredBlocks
 MakeGeneric=makeGeneric
