--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
@@ -185,6 +185,8 @@ MakeGeneric=rendreGeneric
 GetDeclaredFields=valChampsDeclares
 GetDeclaredAnonymousTypes=valTypesAnonymesDeclares
 GetDeclaredAnonymousLambda=valLambdaAnonymesDeclares
+GetDeclaredAnonymousLambdaLocalVars=valLocalVarsLambdaAnonymesDeclares
+GetDeclaredAnonymousLambdaLoopVars=valBoucleVarsLambdaAnonymesDeclares
 GetDeclaredLocalTypes=valLocalTypesDeclares
 GetDeclaredBlocks=valBlocsDeclares
 GetOperators=valOperateurs
