--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -122,6 +122,7 @@ StartsWith=startsWith
 DeleteCharAt=deleteCharAt
 LastIndexOf=lastIndexOf
 ToLowerCase=toLowerCase
+ToLowerCaseChar=toLowerCase
 TrimToSize=trimToSize
 IsInfinite=isInfinite
 IteratorTable=iteratorTable
@@ -133,6 +134,7 @@ SetLength=setLength
 EnsureCapacity=ensureCapacity
 SplitChars=splitChars
 ToUpperCase=toUpperCase
+ToUpperCaseChar=toUpperCase
 SetCharAt=setCharAt
 RegionMatches=regionMatches
 SplitStrings=splitStrings
