--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/fr/types.properties
@@ -123,10 +123,12 @@ IndexOf=indiceDe
 SubSequence=sousSequence
 IterableTable=$coeur.IterableTable
 ToLowerCase=versMinuscule
+ToLowerCaseChar=versMinuscule
 ReplaceMultiple=remplacerMultiple
 GetDirectionality=valDirection
 LastIndexOf=dernierIndiceDe
 ToUpperCase=versMajuscule
+ToUpperCaseChar=versMajuscule
 GetCharType=valType
 SplitStrings=separerChaines
 DeleteCharAt=supprimerCaractere
