--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -84,6 +84,7 @@ String=$core.String
 GetBytes=getBytes
 GetType=getType
 Replace=replace
+ReplaceString=replace
 Split=split
 Trim=trim
 CharAt=charAt
