--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -109,6 +109,7 @@ Capacity=capacite
 Length=longueur
 IsSpace=estEspace
 Replace=remplacer
+ReplaceString=remplacer
 Split=separer
 Contains=contient
 IsEmpty=estVide
