--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -913,3 +913,72 @@ Annotated0GetDeclaredAnonymousLambda0=a
 Annotated0GetDeclaredAnonymousLambda1=b
 Annotated0GetDeclaredAnonymousLambda2=c
 Annotated0GetDeclaredAnonymousLambda3=d
+Thread0SetPriority0=a
+Thread0Sleep0=a
+Thread0Print0=a
+Thread1Print0=a
+Thread2Print0=a
+Thread2Print1=b
+Thread0ThreadExitHook0=a
+Thread0Thread0=a
+ThreadSet0ThreadSetAdd0=a
+ThreadSet0ThreadSetContains0=a
+ThreadSet0ThreadSetRemove0=a
+ThreadSet0ThreadSet0=a
+ReentrantLock0ReentrantLock0=a
+AtomicBoolean0SetAtomic0=a
+AtomicBoolean0CompareAndSetAtomic0=a
+AtomicBoolean0CompareAndSetAtomic1=b
+AtomicBoolean0GetAndSetAtomic0=a
+AtomicBoolean0LazySetAtomic0=a
+AtomicBoolean0AtomicBoolean0=a
+AtomicInteger0SetAtomic0=a
+AtomicInteger0CompareAndSetAtomic0=a
+AtomicInteger0CompareAndSetAtomic1=b
+AtomicInteger0GetAndSetAtomic0=a
+AtomicInteger0LazySetAtomic0=a
+AtomicInteger0AddAndGetAtomic0=a
+AtomicInteger0GetAndAddAtomic0=a
+AtomicInteger0AtomicInteger0=a
+AtomicLong0SetAtomic0=a
+AtomicLong0CompareAndSetAtomic0=a
+AtomicLong0CompareAndSetAtomic1=b
+AtomicLong0GetAndSetAtomic0=a
+AtomicLong0LazySetAtomic0=a
+AtomicLong0AddAndGetAtomic0=a
+AtomicLong0GetAndAddAtomic0=a
+AtomicLong0AtomicLong0=a
+EntryBinary0EntryBinary0=a
+EntryBinary0EntryBinary1=b
+EntryText0EntryText0=a
+EntryText0EntryText1=b
+File0Read0=a
+File0Write0=a
+File0Write1=b
+File0FileReadBin0=a
+File0FileWriteBin0=a
+File0FileWriteBin1=b
+File0ThreadSetRemove0=a
+File0FileRename0=a
+File0FileRename1=b
+File0AppendToFile0=a
+File0AppendToFile1=b
+File0FileAbsolutePath0=a
+File0FileGetName0=a
+File0FileGetParentPath0=a
+File0FileGetLength0=a
+File0FileLastModif0=a
+File0FileListDirectories0=a
+File0FileListFiles0=a
+File0FileIsDirectory0=a
+File0FileIsFile0=a
+File0FileIsAbsolute0=a
+File0FileZipBin0=a
+File0FileZipBin1=b
+File0FileZipBinArray0=a
+File0FileZipText0=a
+File0FileZipText1=b
+File0FileZippedBin0=a
+File0FileZippedBinArray0=a
+File0FileZippedText0=a
+File0FileMakeDirs0=a
