--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -982,3 +982,62 @@ File0FileZippedBin0=a
 File0FileZippedBinArray0=a
 File0FileZippedText0=a
 File0FileMakeDirs0=a
+CustIterator0CustIterator0=a
+List0AddLi0=a
+List1AddLi0=a
+List1AddLi1=b
+List0This0=a
+List1This0=a
+List0RemoveLi0=a
+List0List0=a
+List1List0=a
+CustPair0SetFirst0=a
+CustPair0SetSecond0=a
+CustPair0CustPair0=a
+CustPair0CustPair1=b
+CustIterTable0CustIterTable0=a
+Table0AddLi0=a
+Table0AddLi1=b
+Table1AddLi0=a
+Table0GetTa0=a
+Table0GetFirstTa0=a
+Table0GetSecondTa0=a
+Table0SetFirst0=a
+Table0SetFirst1=b
+Table0SetSecond0=a
+Table0SetSecond1=b
+Table0RemoveLi0=a
+Execute0ExecuteTests0=a
+Execute0Run0=a
+Execute0Run1=b
+Execute0Run2=c
+Execute0ExecuteConvert0=a
+Execute0ExecuteSetupNoException0=a
+Execute0ExecuteSetupError0=a
+Execute0ExecuteSetupError1=b
+Execute0ExecuteSetupError2=c
+Execute1ExecuteSetupError0=a
+Execute1ExecuteSetupError1=b
+Assert0AssertAssert0=a
+Assert0AssertAssert1=b
+Assert1AssertAssert0=a
+Assert1AssertAssert1=b
+Assert2AssertAssert0=a
+Assert2AssertAssert1=b
+Assert3AssertAssert0=a
+Assert3AssertAssert1=b
+Assert4AssertAssert0=a
+Assert4AssertAssert1=b
+Assert0AssertAssertTrue0=a
+Assert0AssertAssertNull0=a
+Assert0AssertAssertNotNull0=a
+Assert0AssertAssertSame0=a
+Assert0AssertAssertSame1=b
+Assert5AssertAssert0=a
+Assert5AssertAssert1=b
+Assert5AssertAssert2=c
+Assert6AssertAssert0=a
+Assert6AssertAssert1=b
+FormatType0Print0=a
+FormatType1Print0=a
+FormatType1Print1=b
