--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -107,6 +107,7 @@ Format=formatter
 Append=ajouter
 Capacity=capacite
 Length=longueur
+ArrayLength=longueur
 IsSpace=estEspace
 Replace=remplacer
 ReplaceString=remplacer
