--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -96,6 +96,7 @@ IsEmpty=isEmpty
 Capacity=capacity
 ForDigit=forDigit
 Length=length
+ArrayLength=length
 IsLetter=isLetter
 Contains=contains
 IsNan=isNan
