--- a/desktop/applis/apps/apps_util/pom.xml
+++ b/desktop/applis/apps/apps_util/pom.xml
@@ -17,5 +17,7 @@
 		<module>random</module>
 		<module>stream</module>
 		<module>expressionlanguageutil</module>
+		<module>expressionlanguageutilimpl</module>
+		<module>expressionlanguagefiles</module>
 	</modules>
 </project>
