--- a/desktop/applis/apps/apps_util/expressionlanguageutilimpl/pom.xml
+++ b/desktop/applis/apps/apps_util/expressionlanguageutilimpl/pom.xml
@@ -3,25 +3,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-       <groupId>interpreter</groupId>
-        <artifactId>interpreter</artifactId>
+       <groupId>apps_util</groupId>
+        <artifactId>apps_util</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>rendersgui</groupId>
-	<artifactId>rendersgui</artifactId>
+	<groupId>expressionlanguageutilimpl</groupId>
+	<artifactId>expressionlanguageutilimpl</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<dependencies>
 		<dependency>
-			<groupId>guicommon</groupId>
-			<artifactId>guicommon</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>expressionlanguagefiles</groupId>
-			<artifactId>expressionlanguagefiles</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+            <groupId>expressionlanguageutil</groupId>
+            <artifactId>expressionlanguageutil</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
