--- a/desktop/applis/apps/gui/interpreter/expressionlanguageunit/pom.xml
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguageunit/pom.xml
@@ -13,8 +13,13 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-            <groupId>expressionlanguageutil</groupId>
-            <artifactId>expressionlanguageutil</artifactId>
+            <groupId>expressionlanguagefiles</groupId>
+            <artifactId>expressionlanguagefiles</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
+            <groupId>expressionlanguageutilimpl</groupId>
+            <artifactId>expressionlanguageutilimpl</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
