--- a/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
+++ b/desktop/applis/apps/gui/interpreter/rendersgui/src/main/resources/resources_renders/aliases/en/types.properties
@@ -956,3 +956,30 @@ Annotated0GetDeclaredAnonymousLambda0=a
 Annotated0GetDeclaredAnonymousLambda1=b
 Annotated0GetDeclaredAnonymousLambda2=c
 Annotated0GetDeclaredAnonymousLambda3=d
+Bean0SetLanguage0=a
+Bean0SetScope0=a
+Bean0SetDataBase0=a
+Bean0SetForms0=a
+StringMapObject0SetKey0=a
+StringMapObject0SetKey1=b
+StringMapObject0GetKey0=a
+StringMapObject0SetValue0=a
+StringMapObject0SetValue1=b
+StringMapObject0GetValue0=a
+StringMapObject0Put0=a
+StringMapObject0Put1=b
+StringMapObject0AddEntry0=a
+StringMapObject0AddEntry1=b
+StringMapObject0Contains0=a
+StringMapObject0GetVal0=a
+StringMapObject0IndexOfEntry0=a
+StringMapObject0PutAll0=a
+StringMapObject0RemoveKey0=a
+Validator0Validate0=a
+Validator0Validate1=b
+Validator0Validate2=c
+Validator0Validate3=d
+Validator0Validate4=e
+Validator0Validate5=f
+Message1NewMessage0=a
+Message0SetArgs0=a
