--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -31,6 +31,10 @@ Iterable=$core.Iterable
 Iterator=iterator
 NullPe=$core.NullObject
 BadIndex=$core.BadIndexException
+BadArgNumber=$core.BadArgNumber
+AbstractTypeErr=$core.AbstractTypeError
+IllegalType=$core.IllegalType
+NonInvokable=$core.NonInvokable
 Sof=$core.StackOverFlow
 Store=$core.BadStore
 Void=void
