--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -38,6 +38,10 @@ NullPe=$coeur.ObjetNul
 NbFormat=$coeur.MauvaisFormat
 BadSize=$coeur.TailleNegative
 BadIndex=$coeur.MauvaisIndice
+BadArgNumber=$coeur.MauvaisNombreArgs
+AbstractTypeErr=$coeur.TypeAbstraitErreur
+IllegalType=$coeur.TypeInattendu
+NonInvokable=$coeur.NonInvoquable
 CastType=$coeur.MauvaisTranstype
 Error=$coeur.Erreur
 Sof=$coeur.PileTropGrande
