--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
@@ -388,3 +388,401 @@ AbsMenu=$core.AbsMenu
 MenuAdd=add
 Menu=$core.Menu
 MenuGet=get
+ActionListener0ActionPerformed0=a
+TreeListener0TreeListenerValueChanged0=a
+TableListener0TableValueTableChanged0=a
+TableListener0TableValueTableChanged1=b
+MouseListener0MouseClicked0=a
+MouseListener0MousePressed0=a
+MouseListener0MouseReleased0=a
+MouseListener0MouseEntered0=a
+MouseListener0MouseExited0=a
+MouseListener0MouseDragged0=a
+MouseListener0MouseMoved0=a
+WheelListener0WheelMove0=a
+KeyListener0KeyPressed0=a
+KeyListener0KeyTyped0=a
+KeyListener0KeyReleased0=a
+WindowListener0WindowOpened0=a
+WindowListener0WindowClosing0=a
+WindowListener0WindowClosed0=a
+WindowListener0WindowIconified0=a
+WindowListener0WindowDeiconified0=a
+WindowListener0WindowActivated0=a
+WindowListener0WindowDeactivated0=a
+ListSelection0ValueChanged0=a
+ListSelection0ValueChanged1=b
+Paint0PaintMethod0=a
+Paint0TabbedPaneAdd0=a
+Paint0TabbedPaneAdd1=b
+Paint0TabbedPaneAdd2=c
+Paint1TabbedPaneAdd0=a
+Paint1TabbedPaneAdd1=b
+Paint0PaintRefresh0=a
+WindowType0SetContent0=a
+WindowType0WindowTypeRelative0=a
+WindowType0ComponentSetVisible0=a
+WindowType0SetMenuBar0=a
+WindowType0AddWindowListener0=a
+Confirm0ConfirmField0=a
+Confirm0ConfirmField1=b
+Confirm0ConfirmField2=c
+Confirm0ConfirmField3=d
+Confirm0ConfirmField4=e
+Confirm0ConfirmField5=f
+Confirm0ConfirmField6=g
+Confirm1ConfirmField0=a
+Confirm1ConfirmField1=b
+Confirm1ConfirmField2=c
+Confirm1ConfirmField3=d
+Confirm1ConfirmField4=e
+Confirm1ConfirmField5=f
+Confirm0ConfirmFull0=a
+Confirm0ConfirmFull1=b
+Confirm0ConfirmFull2=c
+Confirm0ConfirmFull3=d
+Confirm0ConfirmFull4=e
+Confirm0ConfirmFull5=f
+Confirm0ConfirmFull6=g
+Confirm1ConfirmFull0=a
+Confirm1ConfirmFull1=b
+Confirm1ConfirmFull2=c
+Confirm1ConfirmFull3=d
+Confirm1ConfirmFull4=e
+Confirm1ConfirmFull5=f
+Confirm0ConfirmYesNo0=a
+Confirm0ConfirmYesNo1=b
+Confirm0ConfirmYesNo2=c
+Confirm0ConfirmYesNo3=d
+Confirm0ConfirmYesNo4=e
+Confirm0ConfirmYesNo5=f
+Confirm1ConfirmYesNo0=a
+Confirm1ConfirmYesNo1=b
+Confirm1ConfirmYesNo2=c
+Confirm1ConfirmYesNo3=d
+Confirm1ConfirmYesNo4=e
+Confirm0ConfirmOk0=a
+Confirm0ConfirmOk1=b
+Confirm0ConfirmOk2=c
+Confirm0ConfirmOk3=d
+Confirm0ConfirmOk4=e
+Confirm1ConfirmOk0=a
+Confirm1ConfirmOk1=b
+Confirm1ConfirmOk2=c
+Confirm1ConfirmOk3=d
+Confirm0ConfirmMessage0=a
+Confirm0ConfirmMessage1=b
+Confirm0ConfirmMessage2=c
+Confirm0ConfirmMessage3=d
+Confirm0ConfirmMessage4=e
+Confirm1ConfirmMessage0=a
+Confirm1ConfirmMessage1=b
+Confirm1ConfirmMessage2=c
+Confirm1ConfirmMessage3=d
+Confirm0TabbedPaneAdd0=a
+Confirm0WindowSetContains0=a
+Confirm0TreeNodeRemove0=a
+WindowSet0TabbedPaneAdd0=a
+WindowSet0WindowSetContains0=a
+WindowSet0TreeNodeRemove0=a
+Dialog0DialogSetModal0=a
+Component0SetFont0=a
+Component0CompBack0=a
+Component0CompFore0=a
+Component0CompFocusable0=a
+Component0CompOpaque0=a
+Component0CompToolTip0=a
+Component0CompLoc0=a
+Component0CompLoc1=b
+Component0CompBorLine0=a
+Component1CompBorLine0=a
+Component1CompBorLine1=b
+Component0CompBorTitle0=a
+Component0ComponentSetPaint0=a
+Component0ComponentSetAutoscrolls0=a
+Component0ComponentSetPreferredSize0=a
+Component0ComponentSetVisible0=a
+Component0ComponentInvokeLater0=a
+Component0AddKeyListener0=a
+Component0AddWheelListener0=a
+Component0AddListener0=a
+Dimension0Dimension0=a
+Dimension0Dimension1=b
+Dimension1Dimension0=a
+TreeNode0TreeNodeAdd0=a
+TreeNode0TreeNodeInsert0=a
+TreeNode0TreeNodeInsert1=b
+TreeNode0TreeNodeRemove0=a
+TreeNode1TreeNodeRemove0=a
+TreeNode0TreeNodeSetUserObject0=a
+TreeNode0TreeNodeIsAncestor0=a
+TreeNode0TreeNodeIsDescendant0=a
+TreeNode0TreeNode0=a
+Tree0TreeAddTreeListener0=a
+Tree0TreeSetRootVisible0=a
+Tree0TreeGetSelected0=a
+Tree0Tree0=a
+TableGui0TableAddHeader0=a
+TableGui0TableAddSelect0=a
+TableGui0TableSetMultiple0=a
+TableGui0TableSetReorder0=a
+TableGui0TableGetColumnName0=a
+TableGui0TableGetColumnAtPoint0=a
+TableGui0TableGetColumnAtPoint1=b
+TableGui0TableGetRowAtPoint0=a
+TableGui0TableGetRowAtPoint1=b
+TableGui0TableSetRowCount0=a
+TableGui0TableSetColumns0=a
+TableGui0TableMoveColumn0=a
+TableGui0TableMoveColumn1=b
+TableGui0TableAddInterval0=a
+TableGui0TableAddInterval1=b
+TableGui0TableRemoveInterval0=a
+TableGui0TableRemoveInterval1=b
+TableGui0TreeNodeSetUserObject0=a
+TableGui0TreeNodeSetUserObject1=b
+TableGui0TreeNodeSetUserObject2=c
+TableGui0TreeNodeGetUserObject0=a
+TableGui0TreeNodeGetUserObject1=b
+TableGui0TableGui0=a
+MouseEvent0MouseEvent0=a
+MouseEvent0MouseEvent1=b
+MouseEvent0MouseEvent2=c
+MouseEvent0MouseEvent3=d
+MouseEvent0MouseEvent4=e
+MouseEvent0MouseEvent5=f
+MouseEvent0MouseEvent6=g
+MouseEvent0MouseEvent7=h
+MouseEvent0MouseEvent8=i
+WheelEvent0WheelEvent0=a
+WheelEvent0WheelEvent1=b
+WheelEvent0WheelEvent2=c
+WheelEvent0WheelEvent3=d
+WheelEvent0WheelEvent4=e
+WheelEvent0WheelEvent5=f
+WheelEvent0WheelEvent6=g
+WheelEvent0WheelEvent7=h
+WheelEvent0WheelEvent8=i
+WheelEvent0WheelEvent9=j
+KeyEvent0KeyEvent0=a
+KeyEvent0KeyEvent1=b
+KeyEvent0KeyEvent2=c
+KeyEvent0KeyEvent3=d
+KeyEvent0KeyEvent4=e
+Panel0TabbedPaneAdd0=a
+Panel1TabbedPaneAdd0=a
+Panel1TabbedPaneAdd1=b
+Panel0RemoveCompo0=a
+Panel1RemoveCompo0=a
+Panel0TreeNodeGetUserObject0=a
+Panel0PanelGrid0=a
+Panel0PanelGrid1=b
+PanelBorder0TabbedPaneAdd0=a
+PanelBorder0TabbedPaneAdd1=b
+TabbedPane0TabbedPaneAdd0=a
+TabbedPane0TabbedPaneAdd1=b
+TabbedPane0TabbedPaneSelIndex0=a
+TabbedPane0TabbedPaneIndex0=a
+TabbedPane0TreeNodeRemove0=a
+TabbedPane1TreeNodeRemove0=a
+TabbedPane0TreeNodeSetUserObject0=a
+TabbedPane0TreeNodeSetUserObject1=b
+TabbedPane0TabbedPaneSetTitle0=a
+TabbedPane0TabbedPaneSetTitle1=b
+TabbedPane0TreeNodeGetUserObject0=a
+TabbedPane0TabbedPaneGetTitle0=a
+ScrollPane0ScrollPaneHorizontalValue0=a
+ScrollPane0ScrollPaneVerticalValue0=a
+ScrollPane0ScrollPaneSetView0=a
+ScrollPane0ScrollPane0=a
+SplitPane0SplitPaneSetLeft0=a
+SplitPane0SplitPaneSetRight0=a
+SplitPane0SplitPaneSetDividerLocation0=a
+SplitPane0SplitPaneSetDividerSize0=a
+SplitPane0SplitPaneSetOneTouchExpandable0=a
+SplitPane0SplitPaneSetContinuousLayout0=a
+SplitPane0SplitPane0=a
+SplitPane0SplitPane1=b
+SplitPane0SplitPane2=c
+Input0InputSetEnabled0=a
+Button0AddListener0=a
+Button0Button0=a
+ProgBar0ProgBarMin0=a
+ProgBar0TreeNodeGetUserObject0=a
+ProgBar0ProgBarMax0=a
+ProgBar0ProgBarOr0=a
+TextLabel0SetLabelText0=a
+TextLabel0TextLabel0=a
+ImageLabel0SetLabelImage0=a
+ImageLabel0ImageLabel0=a
+Font0FontStringWidth0=a
+Font1FontStringWidth0=a
+Font1FontStringWidth1=b
+Font0Font0=a
+Font1Font0=a
+Font1Font1=b
+Font1Font2=c
+Font1Font3=d
+Color0Color0=a
+Color1Color0=a
+Color1Color1=b
+Color2Color0=a
+Color2Color1=b
+Color2Color2=c
+Color3Color0=a
+Color3Color1=b
+Color3Color2=c
+Color3Color3=d
+Image0TreeNodeGetUserObject0=a
+Image0TreeNodeGetUserObject1=b
+Image0TreeNodeSetUserObject0=a
+Image0TreeNodeSetUserObject1=b
+Image0TreeNodeSetUserObject2=c
+Image0ImageSetColor0=a
+Image0SetFont0=a
+Image0ImageDraw0=a
+Image0ImageDraw1=b
+Image0ImageDraw2=c
+Image1ImageDraw0=a
+Image1ImageDraw1=b
+Image1ImageDraw2=c
+Image0ImageDrawLine0=a
+Image0ImageDrawLine1=b
+Image0ImageDrawLine2=c
+Image0ImageDrawLine3=d
+Image0ImageDrawRect0=a
+Image0ImageDrawRect1=b
+Image0ImageDrawRect2=c
+Image0ImageDrawRect3=d
+Image0ImageDrawOval0=a
+Image0ImageDrawOval1=b
+Image0ImageDrawOval2=c
+Image0ImageDrawOval3=d
+Image0ImageDrawPolygon0=a
+Image0ImageDrawPolygon1=b
+Image0ImageFillRect0=a
+Image0ImageFillRect1=b
+Image0ImageFillRect2=c
+Image0ImageFillRect3=d
+Image0ImageFillOval0=a
+Image0ImageFillOval1=b
+Image0ImageFillOval2=c
+Image0ImageFillOval3=d
+Image0ImageFillPolygon0=a
+Image0ImageFillPolygon1=b
+Image0Image0=a
+Image0Image1=b
+Image0Image2=c
+Render0RenderSetHeight0=a
+Render0RenderSetWidth0=a
+Render0ComponentSetPaint0=a
+GrList0GrListSetRender0=a
+GrList0GrListSetSelection0=a
+GrList0GrListSetVisibleRowCount0=a
+GrList0TabbedPaneAdd0=a
+GrList0TabbedPaneAdd1=b
+GrList1TabbedPaneAdd0=a
+GrList1TabbedPaneAdd1=b
+GrList1TabbedPaneAdd2=c
+GrList0TreeNodeSetUserObject0=a
+GrList0TreeNodeSetUserObject1=b
+GrList0TreeNodeSetUserObject2=c
+GrList0GrListSetSelectedIndexes0=a
+GrList0RemoveCompo0=a
+GrList0GrList0=a
+Combo0ComboSetListener0=a
+Combo0TabbedPaneAdd0=a
+Combo0ComboSelectItem0=a
+Combo0ComboRemoveItem0=a
+Combo0Combo0=a
+Combo1Combo0=a
+Combo1Combo1=b
+ButtonGroup0TabbedPaneAdd0=a
+PopupMenu0TabbedPaneAdd0=a
+PopupMenu0PopupMenuGetComp0=a
+PopupMenu0PopupMenuRemoveComp0=a
+PopupMenu0PopupMenuAddMenu0=a
+PopupMenu0PopupMenuGetMenu0=a
+PopupMenu0PopupMenuRemoveMenu0=a
+PopupMenu0PopupMenuShow0=a
+PopupMenu0PopupMenuShow1=b
+PopupMenu0PopupMenuShow2=c
+Radio0RadioSetSelected0=a
+Radio0SetLabelText0=a
+Radio0AddChange0=a
+Radio0Radio0=a
+Radio1Radio0=a
+Radio1Radio1=b
+CheckBox0RadioSetSelected0=a
+CheckBox0SetLabelText0=a
+CheckBox0CheckBox0=a
+CheckBox1CheckBox0=a
+CheckBox1CheckBox1=b
+TextField0SetLabelText0=a
+TextField0TextFieldAddAction0=a
+TextField0TextField0=a
+TextField1TextField0=a
+TextField2TextField0=a
+TextField2TextField1=b
+TextArea0SetLabelText0=a
+TextArea0TabbedPaneAdd0=a
+TextArea0TreeNodeInsert0=a
+TextArea0TreeNodeInsert1=b
+TextArea0TextAreaSetSelectionStart0=a
+TextArea0TextAreaSetSelectionEnd0=a
+TextArea0TextAreaSetTabSize0=a
+TextArea0TextAreaReplaceRange0=a
+TextArea0TextAreaReplaceRange1=b
+TextArea0TextAreaReplaceRange2=c
+TextArea0TextAreaReplaceSelection0=a
+TextArea0TreeGetSelected0=a
+TextArea0TreeGetSelected1=b
+TextArea0TextArea0=a
+TextArea1TextArea0=a
+TextArea1TextArea1=b
+TextArea2TextArea0=a
+TextArea2TextArea1=b
+TextArea2TextArea2=c
+Spinner0SpinnerSetMax0=a
+Spinner0SpinnerSetMin0=a
+Spinner0TreeNodeSetUserObject0=a
+Spinner0SpinnerSetStep0=a
+Spinner0SpinnerSetRange0=a
+Spinner0SpinnerSetRange1=b
+Spinner0SpinnerSetRangeValue0=a
+Spinner0SpinnerSetRangeValue1=b
+Spinner0SpinnerSetRangeValue2=c
+Spinner0AddChange0=a
+Spinner0Spinner0=a
+Spinner0Spinner1=b
+Spinner0Spinner2=c
+Spinner0Spinner3=d
+Slider0SpinnerSetMax0=a
+Slider0SpinnerSetMin0=a
+Slider0TreeNodeSetUserObject0=a
+Slider0SliderSetOrientation0=a
+Slider0AddChange0=a
+Slider0Slider0=a
+Slider1Slider0=a
+Slider1Slider1=b
+Slider2Slider0=a
+Slider2Slider1=b
+Slider2Slider2=c
+Slider3Slider0=a
+Slider3Slider1=b
+Slider3Slider2=c
+Slider3Slider3=d
+MenuBar0TabbedPaneAdd0=a
+MenuBar0TreeNodeRemove0=a
+MenuBar0TreeNodeGetUserObject0=a
+AbsMenu0AbsMenuSetText0=a
+AbsMenu0InputSetEnabled0=a
+AbsMenu0AbsMenuSetDeepEnabled0=a
+Menu0TabbedPaneAdd0=a
+Menu0TreeNodeRemove0=a
+Menu0TreeNodeGetUserObject0=a
+Menu0Menu0=a
+AbsMenuItem0TabbedPaneAdd0=a
+MenuItem0MenuItem0=a
+MenuItemCheck0RadioSetSelected0=a
+MenuItemCheck0MenuItemCheck0=a
