--- a/desktop/applis/apps/apps_util/pom.xml
+++ b/desktop/applis/apps/apps_util/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>apps_util</artifactId>
 	<packaging>pom</packaging>
 	<modules>
+		<module>streamcore</module>
 		<module>resources</module>
 		<module>threads</module>
 		<module>random</module>
