--- a/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>threads</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>streamcore</groupId>
+            <artifactId>streamcore</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
