--- a/desktop/applis/apps/apps_util/stream/pom.xml
+++ b/desktop/applis/apps/apps_util/stream/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>streamcore</groupId>
+			<artifactId>streamcore</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 		    <groupId>sml</groupId>
 		    <artifactId>sml</artifactId>
 		    <version>1.0-SNAPSHOT</version>
