--- a/desktop/applis/apps/apps_util/streamcore/pom.xml
+++ b/desktop/applis/apps/apps_util/streamcore/pom.xml
@@ -7,15 +7,16 @@
         <artifactId>apps_util</artifactId>
         <version>2.0</version>
     </parent>
-	<groupId>resources</groupId>
-	<artifactId>resources</artifactId>
+	<groupId>streamcore</groupId>
+	<artifactId>streamcore</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+
 	<dependencies>
-        <dependency>
-            <groupId>streamcore</groupId>
-            <artifactId>streamcore</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+		<dependency>
+		    <groupId>sml</groupId>
+		    <artifactId>sml</artifactId>
+		    <version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
