--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -54,6 +54,7 @@ Character=$core.Character
 ParseFloat=parseFloat
 ParseIntOrNull=parseIntOrNull
 ToStringMethod=toString
+Signum=sgn
 ParseLongOrNull=parseLongOrNull
 PrimShort=short
 ParseByteOrNull=parseByteOrNull
@@ -792,6 +793,9 @@ Integer1ParseIntOrNull1=b
 Integer0Integer0=a
 Integer1Integer0=a
 Long0ToStringMethod0=a
+Long1ToStringMethod0=a
+Long1ToStringMethod1=b
+Long0Signum0=a
 Long0ParseLong0=a
 Long1ParseLong0=a
 Long1ParseLong1=b
