--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -81,6 +81,7 @@ ValueOfMethod=valeurDe
 PrimFloat=flottant
 CompareTo=comparer
 ToStringMethod=chaine
+Signum=sgn
 PrimBoolean=booleen
 PrimShort=entier2
 PrimInteger=entier4
@@ -792,6 +793,9 @@ Integer1ParseIntOrNull1=b
 Integer0Integer0=a
 Integer1Integer0=a
 Long0ToStringMethod0=a
+Long1ToStringMethod0=a
+Long1ToStringMethod1=b
+Long0Signum0=a
 Long0ParseLong0=a
 Long1ParseLong0=a
 Long1ParseLong1=b
