--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -55,6 +55,9 @@ ParseFloat=parseFloat
 ParseIntOrNull=parseIntOrNull
 ToStringMethod=toString
 Signum=sgn
+Bin=bin
+Oct=oct
+Hex=hex
 ParseLongOrNull=parseLongOrNull
 PrimShort=short
 ParseByteOrNull=parseByteOrNull
@@ -746,6 +749,18 @@ Math1Gt0=a
 Math1Gt1=b
 Math0Random0=a
 Math0Seed0=a
+Byte0ToBinString0=a
+Byte0ToOctString0=a
+Byte0ToHexString0=a
+Short0ToBinString0=a
+Short0ToOctString0=a
+Short0ToHexString0=a
+Integer0ToBinString0=a
+Integer0ToOctString0=a
+Integer0ToHexString0=a
+Long0ToBinString0=a
+Long0ToOctString0=a
+Long0ToHexString0=a
 Boolean0Compare0=a
 Boolean0Compare1=b
 Boolean0CompareTo0=a
