--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -102,6 +102,8 @@ Delete=supprimer
 Name=nom
 Ordinal=ordinal
 Abs=abs
+Max=max
+Min=min
 Mod=mod
 PairType=$coeur.Pair
 Quot=quot
@@ -630,6 +632,14 @@ Resources0ReadResources0=a
 Resources0ReadResourcesIndex0=a
 Math0Abs0=a
 Math1Abs0=a
+Math0Max0=a
+Math0Max1=b
+Math1Max0=a
+Math1Max1=b
+Math0Min0=a
+Math0Min1=b
+Math1Min0=a
+Math1Min1=b
 Math0Quot0=a
 Math0Quot1=b
 Math1Quot0=a
