--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -15,6 +15,7 @@ Digit=digit
 Short=$core.Short
 Integer=$core.Integer
 Compare=compare
+StringCompare=compare
 Float=$core.Float
 ParseInt=parseInt
 IsDigit=isDigit
@@ -23,6 +24,7 @@ IntValue=intValue
 Byte=$core.Byte
 PrimChar=char
 Equals=equals
+CharSequenceEquals=equals
 Long=$core.Long
 Number=$core.Number
 PrimLong=long
@@ -54,6 +56,9 @@ Character=$core.Character
 ParseFloat=parseFloat
 ParseIntOrNull=parseIntOrNull
 ToStringMethod=toString
+StackTraceElementToString=toString
+CharSequenceToString=toString
+ErrorToString=toString
 Signum=sgn
 Bin=bin
 Oct=oct
@@ -66,6 +71,7 @@ ParseBoolean=parseBoolean
 ParseFloatOrNull=parseFloatOrNull
 ShortValue=shortValue
 CompareTo=compareTo
+CharSequenceCompareTo=compareTo
 MinValueField=MIN_VALUE
 PrimInteger=int
 ParseByte=parseByte
@@ -74,6 +80,8 @@ ParseLong=parseLong
 PrimDouble=double
 IllegalArg=$core.IllegalArgument
 ValueOfMethod=valueOf
+StringValueOf=valueOf
+StringUtilValueOf=valueOf
 ParseShort=parseShort
 ParseDoubleOrNull=parseDoubleOrNull
 ParseDouble=parseDouble
@@ -264,6 +272,7 @@ RotateRight=rotateRight
 GetGenericBounds=getGenericBounds
 ArrayGetLength=getLength
 CurrentStack=current
+ErrorCurrentStack=current
 ArrayNewInstance=newArrayInstance
 StringUtil=$core.StringUtil
 GetParent=getParent
