--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -19,6 +19,7 @@ IntValue=valEntier4
 IsDigit=estChiffre
 Integer=$coeur.Entier4
 Compare=compare
+StringCompare=compare
 IsLetter=estLettre
 Long=$coeur.Entier8
 PrimLong=entier8
@@ -29,6 +30,7 @@ Float=$coeur.Flottant
 Double=$coeur.Double
 Number=$coeur.Nombre
 Equals=egal
+CharSequenceEquals=egal
 Iterator=iterateur
 EnumType=$coeur.$en
 Iterable=$coeur.Iterable
@@ -78,9 +80,15 @@ ParseDoubleOrNull=parseDoubleOuNul
 ByteValue=valEntier1
 ParseByteOrNull=parseEntier1OuNul
 ValueOfMethod=valeurDe
+StringValueOf=valeurDe
+StringUtilValueOf=valeurDe
 PrimFloat=flottant
 CompareTo=comparer
+CharSequenceCompareTo=comparer
 ToStringMethod=chaine
+StackTraceElementToString=chaine
+CharSequenceToString=chaine
+ErrorToString=chaine
 Signum=sgn
 Bin=bin
 Oct=oct
@@ -302,6 +310,7 @@ EnumOrdinal=ordinal
 BitShiftLeft=binGlisserGauche
 BitShiftRight=binGlisserDroite
 CurrentStack=courante
+ErrorCurrentStack=courante
 RotateRight=rotDroite
 StackTraceElement=$coeur.Pile
 RotateLeft=rotGauche
