--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/fr/typesgui.properties
@@ -129,6 +129,7 @@ GetNextCompo=suivant
 GetIndexCompo=val
 ImageGetWidth=l
 ImageIsWithAlpha=alpha
+ImageEq=e
 ImageGetColor=valCouleur
 ImageDrawOval=dessinerOval
 ColorGreen=v
@@ -670,6 +671,8 @@ Image0ImageFillOval2=c
 Image0ImageFillOval3=d
 Image0ImageFillPolygon0=a
 Image0ImageFillPolygon1=b
+Image0ImageEq0=a
+Image0ImageEq1=b
 Image0Image0=a
 Image0Image1=b
 Image0Image2=c
