--- a/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
+++ b/desktop/applis/apps/gui/interpreter/expressionlanguagegui/src/main/resources/resources_lg_gui/aliases/en/typesgui.properties
@@ -137,6 +137,7 @@ ColorBlue=b
 ImageFillRect=fillRect
 ComponentSetSize=setSize
 ImageDrawLine=drawLine
+ImageEq=e
 ImageGetColor=getColor
 ComponentIsVisible=isVisible
 ComponentInvokeLater=invokeLater
@@ -670,6 +671,8 @@ Image0ImageFillOval2=c
 Image0ImageFillOval3=d
 Image0ImageFillPolygon0=a
 Image0ImageFillPolygon1=b
+Image0ImageEq0=a
+Image0ImageEq1=b
 Image0Image0=a
 Image0Image1=b
 Image0Image2=c
