--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -301,6 +301,7 @@ GetLowerBounds=getLowerBounds
 GetSuperClass=getSuperClass
 IsVariable=isVariable
 MakeWildCard=makeWildCard
+MakeRefType=makeRefType
 IsInstance=isInstance
 IsAssignableFrom=isAssignableFrom
 IsInterface=isInterface
@@ -311,6 +312,7 @@ IsVarargs=isVarargs
 IsProtected=isProtected
 GetGenericType=getGenericType
 IsWildCard=isWildCard
+IsRefType=isRefType
 IsPrimitive=isPrimitive
 IsPackage=isPackage
 IsAnnotation=isAnnotation
