--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -295,12 +295,14 @@ GetGenericType=valGeneType
 IsPackage=estPaquetage
 IsProtected=estProtege
 MakeWildCard=rendreSynthetique
+MakeRefType=rendreTypeRef
 IsVariable=estVariable
 IsInstance=estInstance
 GetEnumConstants=valEnumConst
 IsAssignableFrom=estAssignableDe
 ArrayNewInstance=nouvelleInstanceTableau
 IsWildCard=estSynthetique
+IsRefType=estTypeRef
 IsInterface=estInterface
 GetGenericBounds=valGeneContraintes
 DefaultInstance=instanceParDefaut
