--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -234,6 +234,7 @@ IsStatic=isStatic
 IsStaticCall=isStaticCall
 IsInstanceMethod=isInstanceMethod
 IsClass=isClass
+IsSpeClass=isSpeClass
 Xor=xor
 Lt=lt
 Gt=gt
