--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -224,6 +224,7 @@ IsStatic=estStatic
 IsStaticCall=estStaticAppel
 IsInstanceMethod=estMethInstance
 IsClass=estClasse
+IsSpeClass=estClasseSpe
 ArraySet=maj
 IsNormal=estNormal
 Invoke=invoque
