--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -235,6 +235,7 @@ IsStaticCall=isStaticCall
 IsInstanceMethod=isInstanceMethod
 IsClass=isClass
 IsSpeClass=isSpeClass
+IsSpeMuClass=isSpeClassMu
 Xor=xor
 Lt=lt
 Gt=gt
