--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -225,6 +225,7 @@ IsStaticCall=estStaticAppel
 IsInstanceMethod=estMethInstance
 IsClass=estClasse
 IsSpeClass=estClasseSpe
+IsSpeMuClass=estClasseSpeMu
 ArraySet=maj
 IsNormal=estNormal
 Invoke=invoque
