--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/en/types.properties
@@ -919,6 +919,7 @@ ClassType0GetDeclaredBlocks0=a
 ClassType0GetDeclaredBlocks1=b
 ClassType0MakeGeneric0=a
 ClassType0MakeWildCard0=a
+ClassType0MakeRef0=a
 ClassType0GetOperators0=a
 ClassType0GetOperators1=b
 ClassType0GetOperators2=c
