add memory mode and add restriction on files naming

--- a/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
+++ b/desktop/applis/apps/apps_util/expressionlanguageutil/src/main/resources/resources_lg/aliases/fr/types.properties
@@ -467,6 +467,7 @@ EntryBinary=$coeur.EltArchBinaire
 EntryText=$coeur.EltArchTexte
 EntryName=nom
 EntryValue=valeur
+EntryTime=temps
 FileIsAbsolute=estAbsolu
 FileReadBin=lireBin
 FileWriteBin=ecrireBin
@@ -998,8 +999,10 @@ AtomicLong0GetAndAddAtomic0=a
 AtomicLong0AtomicLong0=a
 EntryBinary0EntryBinary0=a
 EntryBinary0EntryBinary1=b
+EntryBinary0EntryTime0=a
 EntryText0EntryText0=a
 EntryText0EntryText1=b
+EntryText0EntryTime0=a
 File0Read0=a
 File0Write0=a
 File0Write1=b
